--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+    <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
 </head>
 <body>
-<script src="scripts/game.js"></script>
+<script src="scripts/game.js" charset="utf-8"></script>
 </body>
 </html>
