--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
 </head>
 <body>
-<script src="scripts/game.js" charset="utf-8"></script>
+    <script src="scripts/menu.js" charset="utf-8"></script>
+    <script src="scripts/game.js" charset="utf-8"></script>
 </body>
 </html>
